--- a/public/history.txt
+++ b/public/history.txt
@@ -1,3 +1,41 @@
+__30.11.2015 V 3.3__
+- Erweiterte Verwaltungsfunktionen von Teilnehmenden an Lehrveranstaltungen
+- Neuer Assistent zum Anlegen von Veranstaltungen
+- Neue Metriken
+- Neues Design von Schaltflächen
+- Überarbeiteter Ablaufplan
+- Neues Bedienkonzept auf der Seite "Termine und Themen"
+- Didaktische Hilfe und Einsatzszenarien für Funktionen für Lehrveranstaltungen auf der "Mehr"-Seite
+- Blubber-Integration auf Profilseite
+- Sidebar auf weiteren Seiten
+- Neuer Adminbereich ist nun auch für Root nutzbar
+- Raumverwaltung: Anzeige verfügbarer Räume verbessert
+
+__15.05.2015 V 3.2__
+- In-Place-Editor für Hilfetouren
+- Überarbeiteter Terminkalender
+- Echte Gruppentermine
+- Scoreformel 2.0
+- Automatische Updates für PlugIns
+- Umstellung der Icons auf SVG
+- Überarbeitung des Buddysystems
+- Neugestaltete "Mehr"-Seite in Veranstaltungen inkl. didaktischer Hinweise
+- Neue Ausgabe über externe Seiten
+
+__14.09.2014 V 3.1__
+- Komplett neues Design
+- Eigene Schriftart
+- Sidebar statt Infoboxen
+- Neue Schmuckgrafiken
+- Verbesserte Customizingmöglichkeiten
+- APIs, z.B. für Sidebar, Hilfefunktionen
+- "Hilfelasche" auf allen Seiten für schnelle Überblick
+- WYSWIG-Editor
+- Neue Eingabemöglichkeit per Dialog
+- Hilfetouren für beliebige Seiten
+- Persönlicher Dateibereich
+- Neue Startseite mit Widgetfunktionalität
+
 __23.05.2014 V 3.0__
 - Neue Anmeldeverfahren mit modularem Aufbau und Härtefallberücksichtigung
 - Plugin-Rollen können jetzt lokal beschränkt sein
@@ -8,10 +46,10 @@ __23.05.2014 V 3.0__
 - Vorschaubilder für Links in Blubber
 - Blubbermeldungen lasen sich "weitersagen"
 - Veranstaltungsgruppen können nun Termine haben
-- Überarbeiteter Mailversand 
+- Überarbeiteter Mailversand
 - Integration eines WYSIWYG-Editors
 - Sortierfunktionen für Veranstaltungslisten
-- Beschreibungstexte für Plugins 
+- Beschreibungstexte für Plugins
 - Integration der REST-Schnittstelle ins Kernsystem
 - Designüberarbeitungen
 - Performanceverbesserungen
@@ -27,7 +65,7 @@ __07.11.2013 V 2.5__
 
 __20.06.2013 V 2.4__
 - Chat, Gästebuch und Messenger entfernt
-- Blubber 
+- Blubber
 - Neues Forum
 - Erweiterung der Seminarklassen für flexible Veranstaltungsvorlagen
 - Datenfelder können Pflichtangaben enthalten
@@ -36,14 +74,14 @@ __20.06.2013 V 2.4__
 - Anwendern können auf ihrer Homepage selbst Plugins einschalten
 - Cronjobs lassen sich über die Weboberfläche anlegen und konfigurieren
 - Neues Mailsystem, dass besser mit Massenmailversand klarkommt
-- Verwendung von MathJAX für LaTex-Befehle 
+- Verwendung von MathJAX für LaTex-Befehle
 - "Alles gelesen"-Button auf der Veranstaltungsübersichtsseite
 - Einführung Blattdesign
 - Hoovern auf Terminen im Kalender
 - PDF-Export eines vollständigen Wikis
 
 __02.08.2012 V 2.3__
-- iCal-Export zum Einbinden der Termine in externe Kalenderanwendungen per Webadresse  
+- iCal-Export zum Einbinden der Termine in externe Kalenderanwendungen per Webadresse
 - Anpassung der Buttons an überarbeitetes Rahmendesign
 - Neuer Blockveranstaltungsassistent
 
@@ -148,14 +186,14 @@ __08.04.2008 v 1.7.0__
 - Erweiterung der globalen Einstellungen um Regeln zur Sperrung von Veranstaltungsdaten
 - Zukünftig PDO als Standardmethode des Datenbankzugriffs
 - Möglichkeit des automatischen Anforderns eines neuen Passworts durch den Benutzer
-- Ajax-Erweiterung zum automatischen Vervollständigen bei der Personen- und Veranstaltungssuche 
+- Ajax-Erweiterung zum automatischen Vervollständigen bei der Personen- und Veranstaltungssuche
 - bei Bedarf Verwendung von Nutzerbilder-Thumbnails anstelle der Originalbilder
 - Erweiterung Anmeldesystem II - die Kontingentierung ist jetzt optional
 - Einbindung von Flash-Movies über Schnellformatierung und im Dateibereich möglich
 - Möglichkeit zum Anlegen eines Wiki-Inhaltsverzeichnises
 - Beschränkung der freien Nutzeranmeldung nach Email-Adressen möglich
 - Generierung von "Assets"-Verweise vereinfacht
-- Refactoring der Datei "plugins.php" 
+- Refactoring der Datei "plugins.php"
 
 __02.10.2007 v 1.6.0__
 - Abbildung von Studienmodulstrukturen (Hallesche Lösung)
@@ -189,21 +227,21 @@ __27.03.2007 v 1.5.0__
 - Nicht abonnieren, sondern nur in Stundenplan eintragen nun möglich
 - neue user management tools für Admins
 - Einführung eines abstrakten Interfaces für einen Template-Mechanismus
-- Umstellung der Verzeichnisstruktur und Anpassungen an PHP5 
+- Umstellung der Verzeichnisstruktur und Anpassungen an PHP5
 - weitere Detailverbesserungen und Bugfixes
 
 __25.08.2006 v 1.4.0__
 - Sichtbarkeit von NutzerInnen
 - Neues Hilfe-System basierend auf einer zentralen Wiki-Seite
-- Ordnerberechtigungssystemim für den Dateibereich 
+- Ordnerberechtigungssystemim für den Dateibereich
 - alternativer Chatclient (AJAX)
-- Literaturlistenimport über Plugins 
+- Literaturlistenimport über Plugins
 - Externe Seiten: Sichtbarkeit von Veranstaltungstypen, Einschränkung der Veranstaltungsübersichten auf ausgewählte Studienbereiche
-- Anzeige des Namens auf der wer-ist-online konfigurierbar, "Motto" 
+- Anzeige des Namens auf der wer-ist-online konfigurierbar, "Motto"
 - Nutzerkommentare bei vorläufiger Anmeldung und Anpassung Teilnehmerexport
-- Erweiterungen für Single Sign On 
-- Erweiterung der Plugin-Schnittstelle 
-- Alphabetische Sortierung für Statusgruppen 
+- Erweiterungen für Single Sign On
+- Erweiterung der Plugin-Schnittstelle
+- Alphabetische Sortierung für Statusgruppen
 - Löschen des eigenen Homepagebildes nun möglich
 - Konfigurierbare Sperre für den Nutzertitel
 - Root-Funktion zum Sperren einzelner Benutzer
@@ -261,7 +299,7 @@ __08.04.2004 v 1.1.0__
 - Erweiterte Raumverwaltung für zentrale Raumvergabe über Raumwünsche
 - Funktion zum Kopieren von Veranstaltungen
 - Mechanismus zum Verstecken und Sichtbarmachen von Veranstaltungen
-- Weiterleitung interner Mail an E-Mail-Adresse schaltbar 
+- Weiterleitung interner Mail an E-Mail-Adresse schaltbar
 - Verschiedene Sortierungen der Teilnehmerliste
 - Anzeige von Veranstaltsungnsummern in verschiedenen Listen
 - Blätternavigation in Gästebüchern
@@ -313,7 +351,7 @@ __31.03.2003 v 0.9.0__
 - Veranstaltungssuche / Browser umgebaut und erweitert, verwendet nun zur Darstellung die neuen Bäume
 - Internationalisierung: weite Teile des Systems können nun auch in Englisch benutzt werden
 - Ressourcenverwaltung wird nun für Verwaltung der Räume von Veranstaltungen genutzt (falls aktiviert)
-- neue Ressourcenverwaltung (eigenständiges Modul) zur Verwaltung von Räumen, Gebäuden, Geräten und weiteren Ressourcen. 
+- neue Ressourcenverwaltung (eigenständiges Modul) zur Verwaltung von Räumen, Gebäuden, Geräten und weiteren Ressourcen.
 - neues Adressbuch auf Grundlage der Buddyverwaltung
 - neues Exporttool, unterstützt Ausgaben in XML, RTF, TXT und PDF
 - neue Einrichtungssuche, verwendet den Einrichtungsbaum
@@ -341,7 +379,7 @@ __31.08.2002 v 0.8 release candidate 3__
 - beliebige Teilnehmer können nun von Berechtigten direkt berufen werden
 - neues Hovern von Tabellen eingebaut
 - Umstrukturierung der Reiter im Adminbereich in logische Einheiten
-- neue Übersichtsseite "Meine Einrichtungen" für direkten Zugriff auf Einrichtungsobjekte eingebaut. 
+- neue Übersichtsseite "Meine Einrichtungen" für direkten Zugriff auf Einrichtungsobjekte eingebaut.
 - Äusserst umfangreiche und flexible Funktionen zur Teilnehmerbegrenzung von Veranstaltungen. Veranstaltungen können mit einem eigenen Losverfahren oder nach chronologischer Anmeldung mit unterschiedlichen Kontingenten für beliebig viele Studiengänge begrenzt werden
 - neue Ebene "Studienfach" eingebaut. Studenten können nun im System hinterlegen, welche Studienfächer sie studieren
 - neuer Archivierungsassistent
@@ -440,14 +478,14 @@ __01.05,2001 v 0.4.0 beta 2__
 - v.2.0 der Dateiverwaltung: Upload nun über grafische Oberfläche, orientiert am Explorerlook
 - kontextsensitives Hilfesystem
 - Gruppierung von "Meine Veranstaltungen" über Farbcodes
-- v.2.0 des Newssystems 
+- v.2.0 des Newssystems
 - Facelifting beim Design: neue Buttons, konsequenter Fensterlook
 
 __19.03.2001 v 0.3.0 beta 1__
 - erster Release bei Sourceforge
 - unzählige Buxfixes
 - viele Detail-Verbesserungen, die sich im laufenden Betrieb ergeben haben
-- diese Version hat den Betrieb über ein Semester als Produktivsystem am Zentrum für interdisziplinäre Medienwissenschaft ohne Probleme überstanden 
+- diese Version hat den Betrieb über ein Semester als Produktivsystem am Zentrum für interdisziplinäre Medienwissenschaft ohne Probleme überstanden
 
 __15.12.2000__
 - Stud.IP wird bei Sourceforge registriert
