--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,275 @@
+08.07.2016 v 3.4.1
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.4.1
+- Feiertage werden bei Änderung einer regelmäßigen Zeit nicht immer korrekt berechnet [#6528]
+- Navigation Additional Attributes - Auswertung [#6537]
+- Änderung des Nutzernamens [#6542]
+- Bei Root-Zugriff auf fremde Einstellungen fehlt die Standardvertretung [#6548]
+- Falsch gerenderte Visbility-Icons [#6578]
+- Verlinkungen auf der Rangseite fehlerhaft [#6584]
+- Leerer Footer in Contentbox führt zu "doppeltem" Rand [#6604]
+- Nachrichten - Mehrere Adressaten hinzufügen [#6621]
+- Unglückliche Darstellung beim Raumwunsch [#6657]
+- Dialoge abdunkeln/Blur-Effekt verzögert [#6670]
+- Touren gehen nicht mehr [#6685]
+- Datenfelder vom Typ "DataFieldSelectboxMultipleEntry" speichern die Daten nicht [#6700]
+
+08.07.2016 v 3.3.2
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.3.2
+- Fatal Error beim Studiengruppen anlegen [#6529]
+- Fehler beim Anlegen von Studiengruppen [#6531]
+- Benutzerverwaltung: Fakultätsadmins können neue Fakultätsadmins erstellen [#6540]
+- Teilnahmebeschränkte Veranstaltungen: Export mit vertauschten Spalten [#6541]
+- Fatal Error beim Kopieren von Dateien in Veranstaltungen [#6549]
+- Fatal Error auf meine Einrichtungen [#6551]
+- Mentions in Blubber funktionieren nicht beim Editieren und Kommentieren [#6552]
+- Ressourcenverwaltung: Maximale Anzahl Wiederholungen zu klein [#6558]
+- Standardvertretungen werden beim Anlegen von Veranstaltungen nicht richtig übernommen [#6562]
+- Teilnehmerseite: Aktionen bei Warteliste/Vorläufig scheitern [#6564]
+- Veranstaltunsdetails: Keine Information über verbindliche Teilnahme [#6565]
+- "Mehr..."-Seite listet auch Plugins, die in der Veranstaltungsklasse deaktiviert wurden [#6567]
+- Passwort vergessen: Link funktioniert immer [#6570]
+- CSS-Compressor verursacht illegales CSS [#6579]
+- Zusatzangaben werden beim Bearbeiten dupliziert [#6580]
+- Kopie von Anmeldeset wird gespeichert obwohl der Benutzer auf Abbrechen klickt [#6581]
+- Archiv: Zugangsberechtigungen hinzufügen [#6585]
+- navigation item '/course/calendar' not found bei "aktivierter Veranstaltung" [#6591]
+- Anmelderegeln werden nicht in der DB gelöscht [#6617]
+- Einstellung "Beim Logout als gelesen markieren" entfernt nicht die persönlichen Benachrichtigungen für Mails [#6618]
+- API-Konfiguration wird immer angezeigt [#6631]
+- UOL: Multipersonsearch funktioniert nicht richitg [#6632]
+- Schreibfehler bei den Grunddaten [#6649]
+- Anmeldesets: ausgewähltes Semester geht verloren [#6650]
+- JS: Session-Cache ist tab- und nicht browser-basiert [#6656]
+- PageLayout::postError in der 3.3 bei StudyAreasWizardStep [#6662]
+- Kontakt-Seite fehlt der Seitentitel [#6669]
+- Responsive: Sidebar ragt über Bildschirmende hinaus [#6674]
+- TEX rendering in Dialogen erfolgt nicht [#6697]
+- Infobild ändern bei neuer Einrichtung führt zu weisser Seite [#6703]
+- Löschen von Dozenten mit Veranstaltungen [#6708]
+- Löschen von Nutzern wirft keine Notifications [#6712]
+- JS-Fehler in tables.js [#6722]
+- Evaluationsauswertung unvollständig [#6727]
+- Abonnierte Forenthemen [#6734]
+- XSS-Lücke auf der Meine Veranstaltungen [#6749]
+
+03.05.2016 v 3.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.4
+- CSS: .studip_form is seriously broken [#4539]
+- maximale Länge einer Wiki-Seite und ähnlicher Felder vergrößern [#4603]
+- SORM: default_values beim Erzeugen des (leeren) Objekts setzen [#5404]
+- Kompilierung der LESS-Dateien in Plugins optimieren [#5415]
+- In Einrichtungen fehlen alle Reiter außer "Übersicht" [#5459]
+- jquery.multi-select.js updaten [#5510]
+- Responsives blubbern [#5521]
+- Development-Modus: Anzeige der abgesetzten DB-Queries und Speicherverbrauch [#5764]
+- StEP00292: Raum-Zeit auf Trails [#5772]
+- StEP00288: Erweiterung des Ablaufplanes mit Termine [#5797]
+- Persönlichen Dateibereich optional öffentlich zugänglich machen [#5839]
+- Plugin "Big Image Handler" in den Kern integrieren [#5847]
+- Sidebar-Komponenten isolieren [#5850]
+- Dialoge: JS-Funktionen mit Payload ausführen [#5877]
+- JS Bibliotheken aktualisieren [#5893]
+- jQuery + jQuery UI aktualisieren [#5896]
+- jQuery UI Timepicker aktualisieren [#5897]
+- Lodash akualisieren [#5898]
+- jQuery Placehold aktualisieren [#5899]
+- Verwaiste jquery.tablednd Bibliothek entfernen [#5900]
+- jQuery scrollTo aktualisieren [#5901]
+- jQuery StickyKit aktualisieren [#5902]
+- Assets-Caching bei Versionswechseln erleichtern [#5906]
+- Modernizr aktualisieren [#5907]
+- Einrichtungen: Administration von Funktionen / Gruppen rudimentär aufräumen [#5908]
+- jQuery nestable aktualisieren [#5909]
+- jQuery Tablesorter aktualisieren [#5911]
+- Admin-Veranstaltungsseite-Aktionsbutton [#5912]
+- Literatureintragen erstellen / bearbeiten [#5914]
+- AccessDeniedException mit passendem Text vorbelegen [#5920]
+- Dialog-Erweiterungen zur 3.4 [#5925]
+- QuickSelection-Widget reparieren/anpassen [#5928]
+- Autoloading verbessern [#5933]
+- relsize() soll bei einer Anzeigetiefe von 1 auch eine Nachkommastelle anzeigen [#5935]
+- JS: Datepicker-Erweiterungen [#5940]
+- Icons/SVG: PNG-Fallback ausbauen [#5944]
+- StEP00291: Neubau von Umfragen und Tests [#5946]
+- Stud.IP ohne Plugins besuchen [#5947]
+- Meine Veranstaltungen: Default-Filter kann nicht vom Betreiber konfiguriert werden [#5961]
+- Cronjobs: Entfernen der alten CLI-Skripte [#5972]
+- LESS: Mixins "sparsamer" einbinden [#5973]
+- Vergrößerter Veranstaltungsavatar in der VA-Übersicht [#5989]
+- Datenfelder für Benutzer komplett ausblenden [#6000]
+- JSUpdater soll immer Zeitstempel der letzten Abfrage mitliefern [#6002]
+- Clean Up 3.4 [#6006]
+- Cronjobs: Handhabung beim Registieren/Abmelden erleichtern [#6012]
+- OpenGraph-Informationen erweitern [#6013]
+- Umbau der News Titelzeile [#6018]
+- Performance Tweaks 3.4 [#6025]
+- Veranstaltungsverwaltung: Klickübersicht renovieren [#6029]
+- Cronjobs: Anzeige der Ausführungszeit anpassen [#6033]
+- Übersetzungsanpassungen zur 3.4 [#6063]
+- Veranstaltungen im Stundenplan-Widget verlinken [#6066]
+- Erweiterung der Formularabsicherung [#6077]
+- Rollenverwaltung optimieren [#6083]
+- Vote-Verwaltung auf placeholder-Attribut umstellen [#6098]
+- div[class|style] im Editor und Purifier erlauben [#6099]
+- Purifier vor dem Speichern laufen lassen [#6101]
+- Trennung von "add_toolbar" und "wysiwyg" [#6102]
+- ckeditor-Plugin für blockquote (Zitat einfügen) [#6103]
+- user_config über REST-API zugänglich machen [#6106]
+- Performance Score Seite [#6113]
+- Zebras töten [#6122]
+- Konsistenzanpassung in Raumverwaltung [#6128]
+- Konsistenzanpassung Rollenverwaltung [#6131]
+- Fullname Personensuche [#6132]
+- Schließen vs. Abbrechen [#6135]
+- Teilnehmerseite Studiengruppen [#6138]
+- Optionales Limit für die Mailqueue [#6142]
+- Tests schlagen fehl mit PHP 5.4 [#6143]
+- Wrapperklasse für Permissionchecks [#6151]
+- Update des PHP-LESS-Compilers [#6153]
+- <tt> Tags in formatiertem Text hervorheben [#6154]
+- Vereinfachte Methoden fürs MessageBox-Handling [#6164]
+- Veranstaltungsname fehlt im Kalender-Export, wenn Themen angegeben sind [#6172]
+- StEP00294: Umstellung der Datenbank auf InnoDB [#6180]
+- Beschränkung des Zugriffs auf Ressourcenbelegungspläne [#6188]
+- StEP00295: Icons: Rollen statt Farben [#6217]
+- Generische Methoden für Bestätigen via JS in eigener Optik [#6224]
+- StEP00296: Terminanfrage im Gruppenterminkalender, Auswahl von Veranstaltungstermine [#6227]
+- Globale Funktionen zur Stringmanipulation (camelCase & snake_case) [#6243]
+- Neues Formulardesign, MultiPersonSearch für Nutzerlisten zu Anmeldesets [#6245]
+- Genauere Gültigkeit von Anmelderegeln [#6249]
+- Mich selbst als Standardvertretung anderer austragen [#6250]
+- Anzeige der Studiengänge bei Wartelisten- und vorläufigen Einträgen [#6251]
+- Bearbeitungsstatus einer Veranstaltung für Admins [#6252]
+- Mehr Semesterfilter für Meine Veranstaltungen [#6253]
+- Überflüsige svn:mergeinfo-Einträge entfernen [#6261]
+- Request::isDialog() hinzufügen [#6263]
+- Anzahl der Teilnehmenden wird nicht auf Admin/Root-Meine Veranstaltungen angezeigt [#6264]
+- Nachtrag zu StEP00255: Verstärkte Berücksichtigung der Veranstaltungsnummer [#6265]
+- Falsche Einsortierung meiner Veranstaltungen durch verschobenen Semesterindex [#6267]
+- Fehlender Dateiordner beim Anlegen einer Veranstaltung [#6277]
+- Vernstaltungskategorien bearbeiten [#6296]
+- Nutzerunfreundliche Darstellung von Filtern bei Anmeldesets [#6304]
+- Berücksichtigung von RESOURCES_ALLOW_ROOM_REQUESTS auf der Raumzeitseite [#6307]
+- Berücksichtige explizit gesetzte Position beim Anlegen einer Statusgruppe über SORM [#6309]
+- Migration 154 schlägt durch Neubau der Umfragen fehl [#6315]
+- Systemsprache soll beim Logout zwar gesetzt werden, ist aber immer leer [#6344]
+- 1. Mitglied einer Statusgruppe [#6346]
+- Sortieren einer Gruppe wirft Exception [#6347]
+- Privatsphäreeinstellungen zeigen keine Elemente mehr an [#6373]
+- Privatsphäreeinstellungen der Personen, deren Vertretung ich bin, werden nicht übernommen [#6383]
+- Aktionsauswahl in Admin-Meine Veranstaltungen für Plugins ist nicht konsistent [#6395]
+- Termine Anlegen geht nur mit aktiviertem Gruppenterminkalender [#6434]
+- Fragebögen: onEnding wird nicht aufgerufen [#6436]
+- Zeitänderungen der regelmäßigen Zeit werden nicht für zugehörige Termine übernommen [#6439]
+- "Umhängen" eines Admins führt zu Problemen auf Meine Veranstaltungen [#6441]
+- Stundenplan merkt sich das eingestellte Semester nicht [#6442]
+- Übersetzungen für die 3.4 [#6456]
+- Fehler Raumbuchung bei Zeitänderung eines Einzeltermins [#6476]
+- Icon für "Buchbare Räume anzeigen" funktioniert nicht mehr [#6477]
+- Farbvielfalt in Raumbelegungsplan - "seriously ugly" [#6478]
+- CronjobScheduler findet messaging nicht mehr [#6482]
+- Mail bei Cronjob-Eskalation wird auch an gesperrte User verschickt [#6484]
+- Fehlende Gruppentitel in Meine Veranstaltungen [#6491]
+- Berücksichtigung der Sichtbarkeit auf externen Seiten führt zu SQL-Fehlern [#6492]
+- Fragebögen bearbeiten [#6495]
+- Im Ablaufplan werden nicht die zugeordneten Gruppen angezeigt [#6497]
+- Nicht übersetzbare Strings beim Anlegen einer VA [#6530]
+- Performanceproblem Kalender ical Export [#6539]
+- Eigene Veranstaltungen auf dem Profil [#6553]
+- Pagination verwendet noch die alten Icons [#6559]
+- Hintergrundfarbe in Tabellen setzen [#4988]
+- Notifications bei allen SORM-Events von PersonalNotifications [#5926]
+- Wiki: Feature-Tour fehlt noch [#6274]
+
+07.04.2016 v 3.3.1
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.3.1
+- RequestBody in REST-API leer [#6358]
+- Raumplanung: Einschränkung der Raumanfragen funktioniert nicht mehr [#4550]
+- Raumplanung: Sortierung der Anfragen nach "dringendere zuerst" funktioniert nicht mehr [#5136]
+- Ankündigungen bei Einrichtungen [#5362]
+- Beim Auflösen von Raumanfragen für Termine fehlen Räume [#5406]
+- Veranstaltung anlegen: Eingabefelder im ersten Schritt sehr schmal [#5895]
+- Anzeige neuer Evaluationen [#5937]
+- Filter bei Suchoption "Belegungszeit anzeigen" ist immer aktiv [#5959]
+- Externe Seiten: Call to undefined function getAllStatusgruppen [#6017]
+- alte multiselect-box im Dateibereich geschrumpft [#6021]
+- Ablaufplan "als .doc" wird als html verschickt [#6070]
+- Ressourcenverwaltung: Tutor sollte auch Belegungen verschieben/kopieren können [#6159]
+- Ressourcenverwaltung: Sortierung der Ressourcen in alphabetischer Reihenfolge [#6160]
+- Ressourcenverwaltung: Aufrufmöglichkeit der Gruppenpläne (Tagesansichten) [#6161]
+- Beim Auflösen von Raumanfragen werden freie Räume nicht angezeigt [#6176]
+- Multipersonsearch sucht nicht mehr mit  Platzhalter % [#6199]
+- Statusgruppen#hasFolder wirft Exception [#6219]
+- Link "Kurs in Ilias" öffnet kein neues Fenster [#6220]
+- Seminar-Assi und Semester [#6226]
+- down()-Funktion von Migration 167 schlägt fehl [#6229]
+- Aktion Archivieren/Sichtbarkeit fehlt bei Admins [#6239]
+- Warnings reduzieren [#6258]
+- Literaturimport aus Citavi kaputt [#6266]
+- Encodingprobleme in Übersetzung [#6269]
+- Videostreams aus dem Dateibereich starten nicht in Chrome [#6273]
+- SimpleOrMap: isset() Inkonsistenz [#6279]
+- "Austragen aus der Veranstaltung" wird für nobody angezeigt [#6281]
+- JS-Fehler in der Studienbereichzuweisung [#6294]
+- Vernstaltungskategorien bearbeiten [#6296]
+- Deaktivierung der Warteliste einer Veranstaltung wird nicht gespeichert, wenn Warteliste nicht leer [#6297]
+- Hooks vor und nach automatischer Platzverteilung werden nicht richtig aufgerufen [#6302]
+- "Nur buchbare Räume" lassen sich nicht dreimal klicken [#6311]
+- Fließtext mit komplexen Links wird zerstört [#6326]
+- Ressourcensuche findet keine Räume, wenn nach Eigenschaften gesucht wird [#6351]
+- Responsive JS fügt ggf. doppelten Toggle für Sidebarmenü hinzu [#6384]
+- Einrichtung/Personal: kaputtes Tabellenlayout wenn Datenfelder angezeigt werden [#6386]
+- Studienbereiche aufklappen funktioniert nur eingeschränkt [#6393]
+- contact_statusgruppen.php noch verlinkt [#6396]
+- SORM-Rückgaben von isset() sind bei Array- und Object-Zugriff unterschiedlich [#6406]
+- Vertretungen werden beim Kopieren einer Veranstaltung nicht richtig übernommen [#6473]
+- SORM: serialisierte Felder werden nicht gespeichert [#6480]
+- Mitarbeiter-Verwaltung einer Einrichtung defekt [#6490]
+- Fehlende Einrichtungszuordnung beim Anlegen von Veranstaltungen [#6494]
+- Chrome: Terminauswahl bei teilnehmerbeschr. Anmeldung nicht möglich [#6502]
+- Sortierung Veranstaltungen im Anmeldeset/Veranstaltungsübersicht [#6516]
+- get_title_for_status liefert den Defaultwert [#6521]
+- Studiengruppen:  Neuer Assi legt Dauer auf 1 Semester fest [#6523]
+- cli/kill_studip_user.php löscht nur einen Nutzer [#6524]
+- Quicksearch-Vorschläge liegen "hinter" Dialog [#6525]
+- Unter bestimmten Umständen ist keine Anmeldung zu Studiengruppe möglich [#6526]
+- Nicht vorhandene css Datei wird eingebunden [#5892]
+- Tabellen wachsen über den Rand hinaus [#5904]
+- Veranstaltungsassistent: Standardvertretung [#5910]
+- Litertur bearbeiten [#5913]
+- Datenfelder Tabelle [#5915]
+- Mobile Ansicht: Hamburger Menu verschwindet beim Scrollen [#5917]
+- Meine Veranstaltungen für Admins: Sortierreihenfolge geht verloren [#5929]
+- Externe Seiten (alt) wirft Fatal Error [#5945]
+- Fatal Error beim Archivieren von unbegrenzten VAs [#6068]
+- Zuviele vorgemerkte Termine im Terminkalender [#6147]
+- Veranstaltungsassistent: Kopieren nutzlos [#6149]
+- Veranstaltungsassistent: Voreinstellungen werden nicht übernommen / immer unsichtbar [#6150]
+- Veranstaltungsassistent: beteiligte Einrichtungen werden nicht gespeichert [#6155]
+- Umlaute kaputt im Dialogfenster [#6156]
+- Dozenten/Tutoren hinzufügen Dialog ohne "Dozenten/Tutoren der Einrichtungs"-Auswahl [#6179]
+- Dialoggröße auf Teilnehmerseite suboptimal [#6189]
+- Anlegen von Blockveranstaltungen [#6221]
+- Automatisches Einfügen von Tags im Source-Editor abschaltbar machen [#4784]
+
+12.03.2016 v 3.2.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.2.4
+- Link zum Impressum vom Login nicht erreichbar [#6233]
+- Fehlende Möglichkeiten, um die Sidebar zu manipulieren [#6238]
+- Gruppenterminkalender: Falsche Antwort nach Auswahl über MPS im Dialog "Kalender freigeben" [#6240]
+- Sortierung von Blubberstreams scheint willkürlich [#6255]
+- Startseitenwidget für Termine gibt keine Beschreibung des Themas aus [#6257]
+- Mentions in Blubberstreams sind zu gierig [#6262]
+- Sicherheitslücke in den Grunddaten einer Veranstaltung [#6365]
+- XSS-Fehler im Admin-Log [#6366]
+- XSS in System/Konfiguration [#6368]
+- SimpleORMap::countBySql() gibt keine Zahl zurück [#6374]
+- Tabelle oauth_server_nonce wird nie abgeräumt [#6381]
+- JS-Cache: Fehler in has() und remove() [#6387]
+- Icons: lightblue/radiobutton-[un]checked.svg sind vertauscht [#6409]
+- STUDIP.URLHelper [#6411]
+- Methoden "PATCH", "OPTIONS" und "HEAD" fehlen [#6412]
+
 30.11.2015 v 3.3
 https://develop.studip.de/trac/query?milestone=Stud.IP+3.3
 - Einzelne Personen hinzufügen [#5130]
