--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,221 @@
+23.06.2017 v 3.5.1
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.1
+- Formulare-CSS Mehrspaltigkeit [#7086]
+- Einstellungen>>Studiendaten: Zellen "Version" fehlt gelegentlich [#7109]
+- MVV Dokumentenupload [#7181]
+- Anmeldesets kopieren führt zu Fatal Error [#7188]
+- Grunddaten einer Veranstaltung: Typ lässt sich nicht ändern [#7197]
+- Anmeldeverfahren mit Prioritätenwahl sieht suboptimal aus [#7218]
+- Fehler beim Bearbeiten/Speichern eines Fragebogens [#7223]
+- Externe Seiten: PHP7-Kompatibilitätsprobleme [#7227]
+- Warning bei session_start() bei neuer Session (PHP7.1) [#7235]
+- Activity Stream: Fatal error beim Speichern einer Ankündigung [#7247]
+- Module: Endsemesterangaben werden als leerer String in der Datenbank gespeichert [#7270]
+- Löschen von Institutszuordnungen in der Benutzerverwaltung [#7279]
+- Lermodule: Fatal Error mit PHP 7 [#7280]
+- Anmeldeverfahren mit Prioritätenwahl und Kontingenten führt zu EIntrag in Warteliste und Veranstaltung [#7281]
+- Anmeldesets kopieren klont keine Kontingente [#7295]
+- Anmeldesets kopieren klont keine Eigenschaften von bevorzugter Anmeldung [#7296]
+- Studienbereich [object Object] [#7301]
+- Fatal Error auf der Veranstaltungsseite [#7351]
+- Veranstaltungsgruppen und Sperren [#7368]
+- Sperren:  im Ablaufplan Dozenten/Gruppen zu Terminen zuordnen ist gesperrt, wenn Raum/Zeit gesperrt ist [#7372]
+- View "studiengaenge/studiengangteile/stgteil.php" verweist noch auf "about.php" [#7380]
+- Meine Veranstaltungen enthält zuviel Müll [#7454]
+- Suche nach Veranstaltungen als Admin/root [#7469]
+
+23.06.2017 v 3.4.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.4.4
+- Verkürzung eines Termins verkürzt nicht die Raumbuchung [#7129]
+- Raumbuchung wird gelöscht bei "Semesterverlängerung" [#7378]
+- Fragebögen: Löschen von Fragen/Antwortmöglichkeiten schlägt fehl [#6546]
+- Fragebögen in Veranstaltungen fragen Admins nach Einrichtung [#6825]
+- Profilseite mit zu hohem Speicherbedarf bei vielen Votes [#6858]
+- SimpleORMap: serialized_field kann nicht auf NULL gesetzt werden [#6915]
+- SORM: Fatal Error: Trying to clone an uncloneable object of class Exception [#7014]
+- Bei regelmäßigen Terminen in VA mit 2 Semester Laufzeit beim Erstellen wird nur erstes Sem. angezeigt [#7017]
+- Fatal error: Class 'ExternConfigDB' not found beim Herunterladen einer Konfiguration [#7127]
+- Veränderung des Zeitraumes einer regelmäßigen Zeit verändert Termine in der Vergangenheit [#7131]
+- Export Teilnehmerliste enthält zuviele Datenfelder [#7140]
+- Belegungen bleiben beim Ändern eines Termins erhalten [#7141]
+- Session id wird nach Login nicht erneuert [#7142]
+- Fatal error bei Suche auf admin_sem_tree [#7159]
+- PHP Fatal error: Serialization of 'Closure' is not allowed [#7182]
+- Fragebögen: Fragebogen bearbeiten endet in unsichtbarer Exception [#7196]
+- Fatal Error bei Auswahl einer Anmeldebedingung vom Typ DataFieldSelectboxEntry [#7198]
+- Fragebögen: "Ergebnis nach Ende der Befragung" sinnlos [#7201]
+- Fragebögen: Kombination von Anonym mit Antworten revidieren [#7202]
+- Fragebögen: Weiterleitung nach Beenden leitet immer zu Veranstaltung [#7204]
+- UnexpectedValueException beim Bearbeiten eines Termins [#7212]
+- "Auswahl der anzuzeigenden Studienbereiche" funktioniert nicht [#7219]
+- Cronjobs: Default-Werte für Parameter des Typs boolean werden ignoriert [#7243]
+- Terminkalender erzeugt immer einen horizontalen Scrollbalken [#7290]
+- Konfigurieren von Veranstaltungen über Tools-Anmeldesets schlägt fehl [#7294]
+- JSONArrayObject wirft Fehler [#7334]
+- SQL-Fehler in CourseSet::getCoursesByCourseSetId() [#7341]
+- Literaturimport kaputt [#7344]
+- Einzeltermine mit leerer metadate_id werden auf Zeiten/Räume nicht angezeigt [#7345]
+- Bearbeiten von Grunddaten einer Veranstaltung (Personal) [#7364]
+- Fehlermeldung bei fehlerhafter Kurs-ID ungenügend [#7382]
+- Mailversand klappt nicht, wenn PHP 5.6 benutzt wird und smtp mit ssl/tls eingestellt ist [#7392]
+- PDF-Export rennt bei Redirect für eingebundenes Bild in eine Endlosschleife [#7426]
+- Autocomplete verschwindet im Dialog [#7437]
+- Fragebogen startet vor der angegebenen Zeit [#7451]
+- 31.10.2017 ist gesamtdeutscher gesetzlicher Feiertag [#7462]
+- Beenden eines Fragebogens hat keinen Effekt [#7467]
+- Ergebnisse des Fragebogens werden bei Änderung der Antwort nicht aktualisiert [#7468]
+- abgelaufene Umfragen werden wieder sichtbar [#7483]
+- Problem bei Anführungszeichen in Beschreibungstexten von Terminen [#7486]
+- Durchführende Dozenten werden gelöscht bei freier Raumangabe [#7514]
+- Dialog: .confirm() bleibt in undefiniertem Zustand [#7515]
+- Fehlermeldung beim Löschen registrierter Konsumenten [#7517]
+- Lehrende aus einer Veranstaltung austragen funktioniert nicht [#7519]
+- Inhaltselemente in Studiengruppen [#7521]
+
+02.02.2017 v 3.5
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5
+- StEP00297 Aktivitätsübersichten aka ActivityFeed als Kernfunktion [#5177]
+- Kernplugins zur Darstellung eines Acitvity-Feeds [#5178]
+- Erweiterung der REST-Api um Routen für Aktivitäten [#5179]
+- Neuer Darstellungsfilter für Admins [#6369]
+- JS: PersonalNotifications sollte den Cache nutzen [#6390]
+- print.css in print.less umwandeln [#6408]
+- Veranstaltungsthemen sichtbarer machen [#6420]
+- Adminbereich auch für Dozenten ermöglichen [#6487]
+- Gesamtteilnehmerzahl auf Detailseite [#6515]
+- Semesterfilter bei den Benachrichtigungen [#6550]
+- "Personen hinzufügen" zu Gruppen an einer Einrichtung um Quickfilter "Nicht zugeordnet" erweitern [#6563]
+- Forum: Beim Verschieben eines Beitrags soll der Studip-Dialog verwendet werden [#6566]
+- StEP00301: Erweiterung des Anmeldeverfahrens (bedingte Anmeldung) [#6574]
+- Neue Anmelderegel: Bevorzugte Anmeldung [#6576]
+- StEP00302: Integration der Modulverwaltung (MVV) in den Kern [#6582]
+- Verbesserte Darstellung der Fehler-/Erfolgsmeldungen beim Bearbeiten der Einrichtungsdaten [#6583]
+- Neuer MessageBox-Typ: Warning [#6586]
+- UserConfig sparsamer speichern [#6588]
+- Pluginverwaltung um Filter erweitern [#6589]
+- StEP00299: Zusammenführung Gruppen in Veranstaltungen und Teilnahmeliste [#6590]
+- Rahmenfarbe der Startseitenwidgets [#6592]
+- Einführung von Responsive Klassen zum ein/ausblenden [#6593]
+- AdminCourseAction im Dialog [#6594]
+- Meine Veranstaltungen responsiv gestalten [#6595]
+- #layout_content responsiv zu viel margin [#6598]
+- Online Liste responsiv gestalten [#6599]
+- Rangliste responsiv gestalten [#6600]
+- Kontakte responsive gestalten [#6601]
+- Nachrichtenübersicht responsiv gestalten [#6602]
+- Ablaufplan responsiv gestalten [#6603]
+- SelectWidget um optgroup erweitern [#6605]
+- CSS Optimierung BarBottomContainer [#6610]
+- Sidebar bei den Studiengruppen-Seiten aufräumen [#6615]
+- Studiengruppenseite verbessern [#6616]
+- Links in zitierten Forenbeiträgen von OpenGraph-Behandlung ausschliessen [#6622]
+- Neuer Suchfilter für die Benutzerverwaltung [#6630]
+- StEP00300: Erweiterung der Ressourcenverwaltung [#6634]
+- Konfigurationseinstellung MESSAGING_FORWARD_USE_REPLYTO [#6640]
+- Konfigurationseinstellung MAIL_ATTACHMENTS_MAX_SIZE [#6641]
+- PHP 7 Kompatibiltät [#6642]
+- Forum: Anderes Icon für das merken von Beiträgen [#6645]
+- Alternativer CourseWizardStep [#6653]
+- Beschränkung auf bestimmte IP Bereiche für Admin Login [#6654]
+- GUI zur Einstellung der Kompatibilität von Anmelderegeln [#6655]
+- StEP00298: Internationalisierung von Datenbankinhalten [#6659]
+- Löschen der alten Icon-PNGs [#6663]
+- Neue und geänderte Icons 3.5 [#6664]
+- Löschen einer Benutzerrolle (Pluginrolle) [#6797]
+- Kopieren von Modulen [#6798]
+- Admin/Standort/Studiengänge wirft Exceptions beim Speichern [#6802]
+- Zeiten/Räume: Fatal Error beim Ändern von Zeiten [#6832]
+- Raumzeit: Durchführende Dozenten gehen beim Bearbeiten eines Termins verloren [#6851]
+- Aktivitäten: Nach Migration ist das Plugin nicht installiert [#6852]
+- Fatal Error externe Seiten [#6868]
+- I18N-Strings gehen kaputt, wenn ein Dialog geladen wird [#6892]
+- Navigation auf mobilem Gerät quasi unbedienbar [#6899]
+- Anlegeassistent: Studienbereiche auf oberster Ebene mit Zeilenumbruch [#6927]
+- MVV-Rechteverwaltung [#6934]
+- MVV Rechteverwaltung Datenfelder [#6936]
+- MVV Rechteverwaltung Sprachauswahl [#6937]
+- MVV Rechteverwaltung Modulteil [#6938]
+- MVV Englische Modulbeschreibungen [#6941]
+- Formularvalidierung läuft nicht in Dialogen [#6942]
+- HelpTourSettings werden beim Neuanlegen einer Tour nicht gespeichert [#6958]
+- Terminanlegung => beteiligte Gruppen [#6964]
+- Anmeldeverfahren: evt. Abbruch Losverfahren bei Kontingenten mit Priowahl [#6976]
+- Veranstaltungsadministration: Veranstaltungstyp-Filter kann nicht geändert werden [#6979]
+- Druckansicht Javascript kaputt [#6984]
+- Gruppen in Veranstaltungen: Sortierung der Gruppen geht nicht [#6985]
+- i18n: required Felder [#7030]
+- Unglücklicher Logeintrag [#7047]
+- Anmeldung zu Veranstaltung: Text nicht korrekt bei Warteliste [#7048]
+- Checkbox "unbegrenzt" bei Angaben zu Modulen und Modulteilen funktioniert nicht [#7049]
+- Fatal Error bei Migration 198 [#7050]
+- MVV Rechteverwaltung Fächer Abschlüsse [#7054]
+- Bearbeiten einer STG-Version [#7066]
+- Löschen Studiengangsteil-Bezeichnung [#7072]
+- MVV: Umschalten von Log-Ansichten von Objekten im Dialog funktioniert nicht, Aufruf beliebiger Log-Events [#7074]
+- MVV: Editieren Studiengangsteilbezeichnung [#7075]
+- Darstellungsfehler der MVV-Übersichtstabellen [#7076]
+- Angabe zu "Typ der Fassung" unterscheidet nicht immer nach Objekt [#7080]
+- Die vom Nutzer eingestellte Sprache wird in der Modulsuche (frei und systematisch) nicht berücksichtigt [#7083]
+- Formatierung der Druckansicht von Modulen in der Modulverwaltung ist kaputt [#7088]
+- Teilnehmer von Gruppen können keine Nachricht an ihre ganze Gruppe schreiben [#7100]
+- Neue Klassen für die Lernmodulschnittstelle für ILIAS 5.2 [#7101]
+- Lizenzstatus Formatierungsfehler in Lizentbeschreibung [#7103]
+- Scrollen bei der Pluginrollenzuweisung von Personen [#7104]
+- CoursewizardStep [#7105]
+- Warning beim Aufrufen der Log-Einträge für Modulteile [#7111]
+- MVV Module (Gruppierung nach Einrichtungen) [#7120]
+- Navigation-Exception bei Blubber-Notification [#7125]
+- Meine Veranstaltung, Filter "Studienbereiche" [#7126]
+- MVV: fehlendes html-tag bei der darstellung von verantwortlichen [#7136]
+- Formatierungen in der Auswertung der Fragebögen [#7155]
+- Textbearbeitung in multilingualen Feldern [#7172]
+- PHP7-Warning im CalendarWriter [#7178]
+- "cli/plugin_manager register" auch für bereits registrierte Plugins [#5426]
+
+11.01.2017 v 3.4.3
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.4.3
+- Aufgelöste Anfragen bleiben für andere Admins sichtbar [#5395]
+- Cronjob "Tägliche Benachrichtigungen" schlägt fehl [#6577]
+- Anlegen einer Zusatzregel [#6644]
+- Inkorrekte Auswertung, wer ein Anmeldeset bearbeiten darf [#6755]
+- CSRF: IMG + Like [#6765]
+- Evtl. XSS über data-confirm bzw. tooltipIcon() [#6795]
+- Migration 187 läuft nicht sauber durch [#6796]
+- Doppelte Meldung vom Forum bei täglichen Benachrichtigungen [#6839]
+- Fragebögen: Antwort zu Test hinzufügen fügt mehrere hinzu [#6867]
+- Benutzerverwaltung: Suche nach Datenfeldern funktioniert nicht [#6869]
+- Fragebögen: UI Feedback aus Beta Test [#6871]
+- Blubberstream editieren geht nicht immer [#6872]
+- Veranstaltung ohne Daten kann angelegt werden [#6897]
+- Zuordnung von Studienbereichen wird nicht protokolliert [#6933]
+- Zeiten/Räume: Termine in der Zukunft sind nicht ausgewählt [#6966]
+- Zeiten/Räume: Startsemester nicht mehr sichtbar [#6970]
+- Losverfahren: Kumulativer Bonus wirkt nicht wie gewünscht [#6994]
+- Anmeldesets Einrichtungszuordnung funktioniert nicht [#7001]
+- IE/Edge: JS-Fehler bzgl. der Benachrichtigungen [#7015]
+- Formular-CSS kaputt in Chrome 55 [#7020]
+- Sortierung im Ablaufplan funktioniert nicht [#7040]
+- Termin-Import im Terminkalender ist kaputt [#7042]
+- Zeiten/Räume Terminart ändern [#7060]
+- Datenfeld vom Typ 'selectboxmultiple' kann nicht bearbeitet werden [#7062]
+- Contentboxen: rechtsbündige Infos im Header werden beim Zeilenumbruch linksbündig angezeigt [#7084]
+- Copy&Paste in Antwortalternativen überschreibt vorhandenen Text [#7090]
+- Fragebögen: Antwortmöglichkeiten können nicht gelöscht werden [#7094]
+- Fatal Error bei nicht vorhandenem SemType [#7097]
+- Fehleingaben beim Bearbeiten eines Termins zerstören den Termin [#7113]
+
+11.01.2017 v 3.3.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.3.4
+- Fatal Error bei den Anmeldesets [#6807]
+- Benachrichtigungen über abonnierte Forenthreads gehen nicht an Vertretungen [#6972]
+- Falsche Berücksichtigung bereits erhaltener Plätze bei Losverfahren [#7016]
+- Löschen von User-Adressbüchern führt zum Verschwinden von Statusgruppen [#7022]
+- SOAP Fehler beim Löschen von Nutzern in cli Modus [#7027]
+- Dateiordnerberechtigungen: Sichtbarkeit wird bei Anzeige falsch ausgewertet [#7032]
+- Lizenzauswähler für Dateien [#7039]
+- Angaben zu Kategorien fehlen im iCal-Export [#7043]
+- "Aus Serie löschen" löscht immer den ersten Termin eines Wiederholungstermins [#7051]
+
 04.08.2016 v 3.4.2
 https://develop.studip.de/trac/query?milestone=Stud.IP+3.4.2
 - Anzeigefehler bei Questionaire (Ergebnisse an Teilnehmer) [#6758]
