--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,90 @@
+05.08.2017 v 3.5.2
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.2
+- Aktivitäten: Zuviel Informationen? [#6819]
+- Methode der Klasse UserManagement initialisiert Exception-Objekt nicht richtig [#6950]
+- API-Route /user/:user_id/news funktioniert nicht [#6996]
+- REST-Route /user/:user_id/schedule funktioniert nicht [#6998]
+- REST-Route /course/:course_id/wiki erzeugt PHP Fatal Error bei leerem Wiki [#6999]
+- Gruppen in Veranstaltungen: Nur Teilnehmer können zugeordnet werden [#7064]
+- MVV: Inkonsistente Darstellung der Einrichtungen / Fakultäten / Fachbereiche [#7106]
+- Activity Stream: Hoher Speicherverbrauch bei Massennachrichten [#7144]
+- Einrichtungen können nicht angelegt werden [#7147]
+- XSS im Activity Stream [#7429]
+- Deaktivierung der eLearning-Schnittstelle sorgt für Fatal Error bei Änderungen auf der mehr-Seite [#7463]
+- Meldung "Die Einrichtung wurde nicht hinzugefügt" beim Bearbeiten eines Nutzers [#7464]
+- select2 Suchfeld funktioniert nicht im Dialog [#7516]
+- MeineVeranstaltungen: Sortierung nach Studienbereichen findet nicht statt [#7520]
+- Nutzerstatus ändern schlägt fehl [#7526]
+- root/admin Account: Eintragen in Gruppen semi-möglich [#7527]
+- Austrag aus Teilnehmergruppe möglich, wenn Selbsteintrag nicht möglich ist [#7533]
+- Admin -> Benutzersuche [#7541]
+- Gruppenseite in Veranstaltungen: Nachricht an alle nicht zugeordneten produziert zu lange URLs [#7563]
+- Admin - Veranstaltungen [#7564]
+- Forum: Beitrag weiterleiten funktioniert nicht [#7579]
+- Regelmässige Termine: Bei Änderungen der Art der Termine wird keine sinnvolle Meldung ausgegeben [#7591]
+- Verbindliche Anmeldung wird auf Meine Veranstaltungen nicht angezeigt [#7595]
+- PDOException in Veranstaltungsverwaltung als Admin [#7609]
+- Suche nach Studiengangteilen zum Hinzufügen zu Studiengängen enthält evtl. leere Einträge [#7650]
+
+04.08.2017 v 3.4.5
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.4.5
+- "Mitarbeiterdetails (templatebasiert)" zeigt keine Nutzer aus Fakultäten an [#1237]
+- Personen können nicht über "Nachname, Vorname" gefunden werden [#2015]
+- Unvollständige Anzeige der Termindaten auf externen Seiten [#3556]
+- Einzeltermine mit gleicher Zeit nach Räumen sortiert anzeigen [#4935]
+- Externe Seiten: Anzeige von Ankündigungen sehr langsam [#5291]
+- Externe Seiten zeigen noch nicht gestartete Ankündigungen [#5387]
+- Dateiordner werden bei Themenänderungen im Ablaufplan nicht angepasst [#5583]
+- Zeiten/Räume: Regelm. Termine bearbeiten [#6837]
+- "memory size exhausted" bei Aufruf der externen Seiten [#6939]
+- StudipCacheFactory::configure() funktioniert nicht mehr [#6952]
+- Layout auf der Seite Zeiten/Räume [#6969]
+- Studienbereiche auf oberster Ebene lassen sich "mehrfach" zuweisen [#6980]
+- Kommentar an Nutzer auf Teilnehmerseite wird abgeschnitten [#6995]
+- Fatal error beim Aufruf der Verwaltung von Studienbereichen [#7021]
+- formaction funktioniert im IE nicht mit <input type="image"> [#7077]
+- News-Widget: Textauszeichnungen erscheinen als Markup [#7082]
+- Externe Seiten: Sichtbarkeit eines Datenfeldes nicht änderbar [#7091]
+- SQL-Fehler beim Migrieren von Nutzerkonten [#7132]
+- falsche Endwoche eines regelmäßigen Termins [#7137]
+- 1. Semesterwoche als Endwoche des Termins wird nicht gespeichert [#7138]
+- Auswahl nicht möglich bei mehreren Einrichtungen gleichen Namens [#7157]
+- Tooltip für Termin auf Zeiten/Räume defekt [#7213]
+- tooltipIcon() akzeptiert keinen dritten Parameter mehr [#7214]
+- Fragebögen: Dialog schließt sich nicht [#7224]
+- Fragebogen ändert beim Speichern den Besitzer [#7225]
+- Zeiten/Räume: Nur Termine in einem Semester vorwählen [#7229]
+- Bearbeiten mehrerer Termine hat komplett anderen Dialog [#7230]
+- Standardaktion für mehrere Termine sollte "Bearbeiten" sein [#7231]
+- Fehler bei Kaskadierung von Checkboxen mit data-proxyfor [#7233]
+- "Ressourcen suchen" beim Auflösen von Raumanfragen öffnet kein neues Fenster mehr [#7237]
+- Beim Export im Ablaufplan fehlt der Raum [#7238]
+- Raumanfragen auf Einzeltermine zeigen beim Auflösen den gebuchten Raum nicht an [#7249]
+- Angabe der Wochentage beim Anlegen von Blockterminen zu versteckt [#7258]
+- aktuell gebuchter Raum wird beim Auflösen von Anfragen nicht aufgelistet [#7265]
+- Lermodule: Ilias5Soap::login produziert Endlosschleife [#7266]
+- XSS in Veranstaltungsnamen [#7267]
+- Löschen einer Einrichtung [#7298]
+- Zuviele rote Fragebögen [#7300]
+- Fragebögen: Fragebogen an Einrichtung kann nur beantwortet werden, wenn man min 'user' dort ist [#7305]
+- XSS im Forum bei Anzeige der Likes [#7430]
+- studip-confirmation / create question in mobiler Ansicht nicht sichtbar [#7458]
+- Laufende Fragebögen sind für die Teilnehmer nicht sichtbar [#7466]
+- Anlegen von Unterordnern erlauben. [#7494]
+- Externe Seiten: Auswahl der Standardkonfiguration funktioniert nicht [#7510]
+- HTMLPurifier hängt bei großen Tabellen [#7513]
+- Blocktermine anlegen: Enddatum vor Startdatum [#7523]
+- 52a Lizenzwähler wird nicht bei verlinkten Dateien angezeigt [#7543]
+- Fehler beim Erstellen eines eigenen Blubber-Stream [#7572]
+- Persönlichen Dateibereich konfigurieren, fehlerhafte Anzeige unter "Untersagte Dateitypen" [#7578]
+- unvollständige Sortierung auf der Teilnehmerliste [#7581]
+- Forum: i18n kaputt, keine Übersetzung [#7589]
+- Platzhalter LECTURER-NO nicht definiert [#7600]
+- Fatal error: Class 'ExternConfigDB' not found beim Hochladen einer Konfiguration [#7603]
+- Anlegeassistent: Darstellungsfehler placeholder [#7608]
+- RoomRequest::getSeats() funktioniert nicht (wenn ::findBySQL verwendet wird) [#7618]
+- SimpleORMap::findOneByFELD funktioniert nicht, wenn der Parameter Leerzeichen enthält [#7623]
+
 23.06.2017 v 3.5.1
 https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.1
 - Formulare-CSS Mehrspaltigkeit [#7086]
